--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ant-design/pro-layout": "^6.5.0",
     "ahooks": "^2.10.9",
     "antd": "^4.16.13",
+    "html-react-parser": "^1.3.0",
     "react": "17.x",
     "react-dom": "17.x",
     "umi": "^3.5.17"
