--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     ]
   },
   "dependencies": {
+    "@ant-design/icons": "^4.6.4",
     "@ant-design/pro-layout": "^6.5.0",
     "ahooks": "^2.10.9",
     "antd": "^4.16.13",
